# AuditLogs

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/auditlogs/: config.py  core.py  init.py
tests/: test_auditlogs.py
