[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AuditLogs"
version = "0.1.0"
description = "A Python package for structured audit logging with daily file rotation and machine name tracking"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Kelton M. Cumbe", email = "nakatsinho@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Logging",
    "Topic :: Utilities",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/LegocodeMz/AuditLogs"
Repository = "https://github.com/LegocodeMz/AuditLogs"
Issues = "https://github.com/LegocodeMz/AuditLogs/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]